Fix btn spacing on team

--- a/base/_base.scss
+++ b/base/_base.scss
@@ -1265,12 +1265,12 @@ a.card-double:active {
 
 @media (max-width: 800px) {
   .card.contact .phone {
-    top: -2rem;
+    top: 0.5rem;
     left: -2.25rem;
   }
 
   .card.contact .email {
-    top: -2rem;
+    top: 0.5rem;
     right: -2.25rem;
   }
 }
